--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- Header section -->
-    <header>
+    <header class="top">
       <h1>Pete Thinkful | Artist</h1>
       <nav>
         <ul class="navbar">
@@ -41,6 +41,7 @@
 
             <div>
               <h3>Hi! I'm Pete Thinkful</h3>
+              <div class="artist">
               <p>I'm an artist living in Denver, Colorado.</p>
               <p>As an artist, I'm interested in:</p>
               <ul>
